source/externs/X11/extensions/XIproto.d


/*********************************************************
 *
 * ChangeDeviceKeyMapping.
 *
 */

struct xChangeDeviceKeyMappingReq {
    CARD8 reqType;        /* input extension major code   */
    CARD8 ReqType;        /* always X_ChangeDeviceKeyMapping */
    CARD16 length;
    CARD8 deviceid;
    KeyCode firstKeyCode;
    CARD8 keySymsPerKeyCode;
    CARD8 keyCodes;
}

/*********************************************************
 *
 * GetDeviceModifierMapping.
 *
 */

struct xGetDeviceModifierMappingReq {
    CARD8 reqType;        /* input extension major code   */
    CARD8 ReqType;        /* always X_GetDeviceModifierMapping */
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xGetDeviceModifierMappingReply {
    CARD8 repType;	/* X_Reply */
    CARD8 RepType;        /* always X_GetDeviceModifierMapping */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 numKeyPerModifier;
    CARD8 pad0;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}

/*********************************************************
 *
 * SetDeviceModifierMapping.
 *
 */

struct xSetDeviceModifierMappingReq {
    CARD8 reqType;        /* input extension major code   */
    CARD8 ReqType;        /* always X_SetDeviceModifierMapping */
    CARD16 length;
    CARD8 deviceid;
    CARD8 numKeyPerModifier;
    CARD16 pad1;
}

struct xSetDeviceModifierMappingReply {
    CARD8 repType;	/* X_Reply */
    CARD8 RepType;        /* always X_SetDeviceModifierMapping */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 success;
    CARD8 pad0;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}

/*********************************************************
 *
 * GetDeviceButtonMapping.
 *
 */

struct xGetDeviceButtonMappingReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_GetDeviceButtonMapping     */
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xGetDeviceButtonMappingReply {
    CARD8 repType;	/* X_Reply */
    CARD8 RepType;        /* always X_GetDeviceButtonMapping */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 nElts;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
}

/*********************************************************
 *
 * SetDeviceButtonMapping.
 *
 */

struct xSetDeviceButtonMappingReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_SetDeviceButtonMapping     */
    CARD16 length;
    CARD8 deviceid;
    CARD8 map_length;
    BYTE pad1, pad2;
}

struct xSetDeviceButtonMappingReply {
    CARD8 repType;		/* X_Reply */
    CARD8 RepType;	/* always X_SetDeviceButtonMapping */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 status;
    BYTE pad0;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}

/*********************************************************
 *
 * QueryDeviceState.
 *
 */

struct xQueryDeviceStateReq {
    CARD8 reqType;
    CARD8 ReqType;        /* always X_QueryDeviceState */
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xQueryDeviceStateReply {
    CARD8 repType;		/* X_Reply */
    CARD8 RepType;	/* always X_QueryDeviceState	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 num_classes;
    BYTE pad0;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}

struct xKeyState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 length;
    CARD8 num_keys;
    BYTE pad1;
    CARD8[32] keys;
}

struct xButtonState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 length;
    CARD8 num_buttons;
    BYTE pad1;
    CARD8[32] buttons;
}

struct xValuatorState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 length;
    CARD8 num_valuators;
    CARD8 mode;
}

/*********************************************************
 *
 * SendExtensionEvent.
 * THIS REQUEST MUST BE KEPT A MULTIPLE OF 8 BYTES IN LENGTH!
 * MORE EVENTS MAY FOLLOW AND THEY MUST BE QUAD-ALIGNED!
 *
 */

struct xSendExtensionEventReq {
    CARD8 reqType;
    CARD8 ReqType;        /* always X_SendExtensionEvent */
    CARD16 length;
    Window destination;
    CARD8 deviceid;
    BOOL propagate;
    CARD16 count;
    CARD8 num_events;
    BYTE pad1, pad2, pad3;
}

/*********************************************************
 *
 * DeviceBell.
 *
 */

struct xDeviceBellReq {
    CARD8 reqType;
    CARD8 ReqType;        /* always X_DeviceBell */
    CARD16 length;
    CARD8 deviceid;
    CARD8 feedbackid;
    CARD8 feedbackclass;
    INT8 percent;
}

/*********************************************************
 *
 * SetDeviceValuators.
 *
 */

struct xSetDeviceValuatorsReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;	/* always X_SetDeviceValuators	*/
    CARD16 length;
    CARD8 deviceid;
    CARD8 first_valuator;
    CARD8 num_valuators;
    BYTE pad1;
}

struct xSetDeviceValuatorsReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* always X_SetDeviceValuators	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 status;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
}

/*********************************************************
 *
 * GetDeviceControl.
 *
 */

struct xGetDeviceControlReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;	/* always X_GetDeviceControl	*/
    CARD16 length;
    CARD16 control;
    CARD8 deviceid;
    BYTE pad2;
}

struct xGetDeviceControlReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* always X_GetDeviceControl	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 status;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
}

struct xDeviceState {
    CARD16 control;	/* control type			*/
    CARD16 length;		/* control length		*/
}

struct xDeviceResolutionState {
    CARD16 control;	/* control type			*/
    CARD16 length;		/* control length		*/
    CARD32 num_valuators;	/* number of valuators		*/
}

struct xDeviceAbsCalibState {
     CARD16 control;
     CARD16 length;
     INT32 min_x;
     INT32 max_x;
     INT32 min_y;
     INT32 max_y;
     CARD32 flip_x;
     CARD32 flip_y;
     CARD32 rotation;
     CARD32 button_threshold;
}

struct xDeviceAbsAreaState {
     CARD16 control;
     CARD16 length;
     CARD32 offset_x;
     CARD32 offset_y;
     CARD32 width;
     CARD32 height;
     CARD32 screen;
     CARD32 following;
}

struct xDeviceCoreState {
    CARD16 control;	/* control type                 */
    CARD16 length; 	/* control length               */
    CARD8 status;
    CARD8 iscore;
    CARD16 pad1;
}

struct xDeviceEnableState {
    CARD16 control;	/* control type                 */
    CARD16 length; 	/* control length               */
    CARD8 enable;
    CARD8 pad0;
    CARD16 pad1;
}

/*********************************************************
 *
 * ChangeDeviceControl.
 *
 */

struct xChangeDeviceControlReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;	/* always X_ChangeDeviceControl */
    CARD16 length;
    CARD16 control;
    CARD8 deviceid;
    BYTE pad0;
}

struct xChangeDeviceControlReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* always X_ChangeDeviceControl	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 status;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
}

struct xDeviceCtl {
    CARD16 control;		/* control type			*/
    CARD16 length;			/* control length		*/
}

struct xDeviceResolutionCtl {
    CARD16 control;		/* control type			*/
    CARD16 length;			/* control length		*/
    CARD8 first_valuator;		/* first valuator to change     */
    CARD8 num_valuators;		/* number of valuators to change*/
    CARD8 pad1, pad2;
}

struct xDeviceAbsCalibCtl {
     CARD16 control;
     CARD16 length;
     INT32 min_x;
     INT32 max_x;
     INT32 min_y;
     INT32 max_y;
     CARD32 flip_x;
     CARD32 flip_y;
     CARD32 rotation;
     CARD32 button_threshold;
}

struct xDeviceAbsAreaCtl {
     CARD16 control;
     CARD16 length;
     CARD32 offset_x;
     CARD32 offset_y;
     INT32 width;
     INT32 height;
     INT32 screen;
     CARD32 following;
}

struct xDeviceCoreCtl {
    CARD16 control;
    CARD16 length;
    CARD8 status;
    CARD8 pad0;
    CARD16 pad1;
}

struct xDeviceEnableCtl {
    CARD16 control;
    CARD16 length;
    CARD8 enable;
    CARD8 pad0;
    CARD16 pad1;
}

/* XI 1.5 */

/*********************************************************
 *
 * ListDeviceProperties.
 *
 */

struct xListDevicePropertiesReq {
    CARD8 reqType;        /* input extension major opcode */
    CARD8 ReqType;        /* always X_ListDeviceProperties */
    CARD16 length;
    CARD8 deviceid;
    CARD8 pad0;
    CARD16 pad1;
}

struct xListDevicePropertiesReply {
    CARD8 repType;        /* X_Reply                       */
    CARD8 RepType;        /* always X_ListDeviceProperties */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD16 nAtoms;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}

/*********************************************************
 *
 * ChangeDeviceProperty.
 *
 */

struct xChangeDevicePropertyReq {
    CARD8 reqType;        /* input extension major opcode */
    CARD8 ReqType;        /* always X_ChangeDeviceProperty */
    CARD16 length;
    Atom property;
    Atom type;
    CARD8 deviceid;
    CARD8 format;
    CARD8 mode;
    CARD8 pad;
    CARD32 nUnits;
}

/*********************************************************
 *
 * DeleteDeviceProperty.
 *
 */

struct xDeleteDevicePropertyReq {
    CARD8 reqType;        /* input extension major opcode */
    CARD8 ReqType;        /* always X_DeleteDeviceProperty */
    CARD16 length;
    Atom property;
    CARD8 deviceid;
    CARD8 pad0;
    CARD16 pad1;
}

/*********************************************************
 *
 * GetDeviceProperty.
 *
 */

struct xGetDevicePropertyReq {
    CARD8 reqType;        /* input extension major opcode */
    CARD8 ReqType;        /* always X_GetDeviceProperty */
    CARD16 length;
    Atom property;
    Atom type;
    CARD32 longOffset;
    CARD32 longLength;
    CARD8 deviceid;
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    BOOL c_delete;
} else {
    BOOL delete_;
}
    CARD16 pad;
}

struct xGetDevicePropertyReply {
    CARD8 repType;        /* X_Reply                        */
    CARD8 RepType;        /* always X_GetDeviceProperty   */
    CARD16 sequenceNumber;
    CARD32 length;
    Atom propertyType;
    CARD32 bytesAfter;
    CARD32 nItems;
    CARD8 format;
    CARD8 deviceid;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
}


/**********************************************************
 *
 * Input extension events.
 *
 * DeviceValuator
 *
 */

struct deviceValuator {
    BYTE type;
    CARD8 deviceid;
    CARD16 sequenceNumber;
    KeyButMask device_state;
    CARD8 num_valuators;
    CARD8 first_valuator;
    INT32 valuator0;
    INT32 valuator1;
    INT32 valuator2;
    INT32 valuator3;
    INT32 valuator4;
    INT32 valuator5;
    }

/**********************************************************
 *
 * DeviceKeyButtonPointer.
 *
 * Used for: DeviceKeyPress, DeviceKeyRelease,
 *	     DeviceButtonPress, DeviceButtonRelease,
 *	     ProximityIn, ProximityOut
 *	     DeviceMotionNotify,
 *
 */
